# backend/src/app.js
@@ -10,6 +10,7 @@ const OpenApiValidator = require('express-openapi-validator');
 
 const recipe = require('./recipe');
 const meal = require('./meal');
+const mealWeek = require('./mealWeek');
 
 const app = express();
 app.use(cors());
@@ -33,6 +34,7 @@ app.get('/v0/recipes', recipe.getAll);
 app.get('/v0/recipe', recipe.getOne);
 app.get('/v0/meals', meal.pullFoodDay);
 app.post('/v0/meals', meal.addFoodUser);
+app.get('/v0/mealWeek', mealWeek.pullFoodWeek);
 
 app.use((err, req, res, next) => {
   res.status(err.status).json({
